# searchmoji

./: Cargo.toml  README.md  Trunk.toml  build.sh  index.html  vercel.json
src/: app.rs  main.rs
static/: emojis.json
