[package]
name = "searchmoji"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = ["Window", "Navigator", "Clipboard"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo = "0.11"
gloo-net = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-timers = "0.2"
